--- a/views/visit.erb
+++ b/views/visit.erb
@@ -16,8 +16,9 @@
 
   <div class="form-group">
     <label>Когда вас ждать?</label>
-    <input name="datetime" type="text" class="form-control"  placeholder="Введите дату и время">
+    <input id="datetimepicker" name="datetime" type="text" class="form-control"  placeholder="Введите дату и время">
   </div>
+
 
   <div class="form-group">
     <label>Ваш парикмахер</label>
@@ -53,7 +54,11 @@
 
   $(function () {
       $('#color').simplecolorpicker();
+      $('#datetimepicker').datetimepicker();
   })
+ // jQuery('#datetimepicker').datetimepicker();
+
+
 
 </script>
 
