--- a/views/visit.erb
+++ b/views/visit.erb
@@ -6,26 +6,28 @@
 
   <div class="form-group">
     <label>Ваше Имя</label>
-    <input name="username" type="text" class="form-control"  placeholder="Ваше Имя">
+    <input name="username" type="text" class="form-control"  placeholder="Ваше Имя" value="<%= @username %>">
       </div>
 
   <div class="form-group">
     <label>Ваше телефон</label>
-    <input name="phone" type="text" class="form-control"  placeholder="Ваше телефон">
+    <input name="phone" type="text" class="form-control"  placeholder="Ваше телефон" value="<%= @phone %>">
   </div>
 
   <div class="form-group">
     <label>Когда вас ждать?</label>
-    <input id="datetimepicker" name="datetime" type="text" class="form-control"  placeholder="Введите дату и время">
+    <input id="datetimepicker" name="datetime" type="text" class="form-control"  placeholder="Введите дату и время" value="<%= @datetimepicker %>">
   </div>
 
 
   <div class="form-group">
     <label>Ваш парикмахер</label>
     <select name="barber" class="form-control" >
-      <option <%= @barber == 'Jessie Pinkman' ? 'selected' : '' %>>Jessie Pinkman</option>
-      <option <%= @barber == 'Walter White' ? 'selected' : '' %>>Walter White</option>
-      <option <%= @barber == 'Gus Fring' ? 'selected' : '' %>>Gus Fring</option>
+
+      <% @barbers.each do |item| %>
+      <option <%= @barber == item['name'] ? 'selected' : '' %>><%= item['name'] %></option>
+      <% end %>
+
     </select>
   </div>
 
@@ -56,7 +58,7 @@
       $('#color').simplecolorpicker();
       $('#datetimepicker').datetimepicker();
   })
- // jQuery('#datetimepicker').datetimepicker();
+
 
 
 
